# postgres-da-ai

./: .gitignore  app.py  pyproject.toml
postgres_da_ai_agent/: main.py
postgres_da_ai_agent/modules/: db.py  llm.py
